--- a/index.html
+++ b/index.html
@@ -31,10 +31,21 @@
           </li>
         </ul>
       </nav>
+      <div class="Navigation-mobile">
+        <div class="Item-text">
+          <img src="./iconos/Unionahorra.svg" alt="" />
+          <p class="parrafo-ahorra-ya">Ahorra Ya</p>
+        </div>
+        <div class="Navigation-Item-mobile">
+          <img src="./iconos/Icon3.svg" alt="icon3" />
+        </div>
+      </div>
     </header>
     <main>
       <h1>Mis ahorros</h1>
-      <p>Mira todo tu ahorro en esta página</p>
+      <br />
+      <p class="parrafop">Mira todo tu ahorro en esta página</p>
+      <br />
       <section class="section-cards">
         <article class="card-saludo">
           <div class="card-saludo__header">
@@ -72,10 +83,15 @@
               <h2>Cena romántica</h2>
             </div>
           </div>
-          <p>Último ahorro recibido el 18 de Noviembre de 2023</p>
-          <div>
-            <img src="./iconos/Progress Status.svg" alt="" />
+          <p class="parrafop">
+            Último ahorro recibido el 18 de Noviembre de 2023
+          </p>
+          <br />
+          <div class="parrafobarra">
+            <p class="monto">S/3000 <span class="se-monto">/S/1000</span></p>
+            <p class="porcentaje">30%</p>
           </div>
+          <progress class="file" max="100" value="30">30%</progress>
         </article>
         <article class="section-tarjeta-item">
           <div class="tarjeta-header">
@@ -84,10 +100,15 @@
               <h2>Viaje a México</h2>
             </div>
           </div>
-          <p>Último ahorro recibido el 09 de Agosto de 2023</p>
-          <div>
-            <img src="./iconos/cragando2.svg" alt="" />
+          <p class="parrafop">Último ahorro recibido el 09 de Agosto de 2023</p>
+          <br />
+          <div class="parrafobarra">
+            <p class="monto">
+              S/10,000 <span class="se-monto">/S/20,000</span>
+            </p>
+            <p class="porcentaje">50%</p>
           </div>
+          <progress class="file" max="100" value="50">50%</progress>
         </article>
         <article class="section-tarjeta-item">
           <div class="tarjeta-header">
@@ -100,10 +121,15 @@
               <h2>Maestría</h2>
             </div>
           </div>
-          <p>Último ahorro recibido el 18 de Noviembre de 2023</p>
-          <div>
-            <img src="./iconos/Progress Statusmaestria-card.svg" alt="" />
+          <p class="parrafop">
+            Último ahorro recibido el 18 de Noviembre de 2023
+          </p>
+          <br />
+          <div class="parrafobarra">
+            <p class="monto">S/7,000 <span class="se-monto">/S/10,000</span></p>
+            <p class="porcentaje">70%</p>
           </div>
+          <progress class="file" max="100" value="70">70%</progress>
         </article>
       </section>
 
@@ -119,10 +145,15 @@
               <h2>Almuerzo en Central</h2>
             </div>
           </div>
-          <p>Último ahorro recibido el 01 de Noviembre de 2023</p>
-          <div>
-            <img src="./iconos/Progress Status.svg" alt="" />
+          <p class="parrafop">
+            Último ahorro recibido el 01 de Noviembre de 2023
+          </p>
+          <br />
+          <div class="parrafobarra">
+            <p class="monto">S/300 <span class="se-monto">/S/1000</span></p>
+            <p class="porcentaje">30%</p>
           </div>
+          <progress class="file" max="100" value="30">30%</progress>
         </article>
         <article class="section-tarjeta-item">
           <div class="tarjeta-header">
@@ -131,10 +162,15 @@
               <h2>Construir casa</h2>
             </div>
           </div>
-          <p>Último ahorro recibido el 18 de Noviembre de 2023</p>
-          <div>
-            <img src="./iconos/casa Status.svg" alt="" />
+          <p class="parrafop">
+            Último ahorro recibido el 18 de Noviembre de 2023
+          </p>
+          <br />
+          <div class="parrafobarra">
+            <p class="monto">S/900 <span class="se-monto">/S/1000</span></p>
+            <p class="porcentaje">90%</p>
           </div>
+          <progress class="file" max="100" value="90">90%</progress>
         </article>
         <article class="section-tarjeta-item">
           <div class="tarjeta-header">
@@ -147,15 +183,20 @@
               <h2>Donación</h2>
             </div>
           </div>
-          <p>Último ahorro recibido el 18 de Noviembre de 2023</p>
-          <div>
-            <img src="./iconos/Progress Statusdon.svg" alt="" />
+          <p class="parrafop">
+            Último ahorro recibido el 18 de Noviembre de 2023
+          </p>
+          <br />
+          <div class="parrafobarra">
+            <p class="monto">S/200 <span class="se-monto">/S/1000</span></p>
+            <p class="porcentaje">20%</p>
           </div>
+          <progress class="file" max="100" value="20">20%</progress>
         </article>
       </section>
       <div class="classcrear">
-        <img src="./iconos/Icon buttoncrear.svg" alt="" />
-        <p>Crear nuevo ahorro</p>
+        <button class="btn">+</button>
+        <p class="text-button">Crear nuevo ahorro</p>
       </div>
     </main>
   </body>
