--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <p>Retirar ahorro</p>
           </div>
 
-          <div class="card-recibe">
+          <div class="card-ahorro">
             <img src="./iconos/image-16 2recibir-ahorro.svg" alt="recibir" />
             <p>Recibir ahorro</p>
           </div>
@@ -131,9 +131,6 @@
           </div>
           <progress class="file" max="100" value="70">70%</progress>
         </article>
-      </section>
-
-      <section class="sections-tarjetas">
         <article class="section-tarjeta-item">
           <div class="tarjeta-header">
             <div class="tarjeta-text">
